--- a/Joomla-3.0/mod_oneallsociallogin/changelog.txt
+++ b/Joomla-3.0/mod_oneallsociallogin/changelog.txt
@@ -1,6 +1,6 @@
 /**
- * @package   	SocialLogin Plugin
- * @copyright 	Copyright 2012 http://www.oneall.com - All rights reserved.
+ * @package   	OneAll Social Login Plugin
+ * @copyright 	Copyright 2011-2014 http://www.oneall.com, all rights reserved
  * @license   	GNU/GPL 2 or later
  *
  * This program is free software; you can redistribute it and/or
@@ -23,6 +23,10 @@
  */
  
 CHANGELOG
+
+2.0
+* Asynchronous JavaScript
+* Renamed from SocialLogin to OneallSocialLogin
 
 1.0
 * Initial port from Joomla 2.5 to 3.0
