--- a/Joomla-3.0/plg_oneallsociallogin/changelog.txt
+++ b/Joomla-3.0/plg_oneallsociallogin/changelog.txt
@@ -1,7 +1,6 @@
-<?php
 /**
- * @package   	SocialLogin
- * @copyright 	Copyright 2012 http://www.oneall.com - All rights reserved.
+ * @package   	OneAll Social Login Plugin
+ * @copyright 	Copyright 2011-2014 http://www.oneall.com, all rights reserved
  * @license   	GNU/GPL 2 or later
  *
  * This program is free software; you can redistribute it and/or
@@ -22,14 +21,12 @@
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  *
  */
-defined ('_JEXEC') or die ('Direct Access to this location is not allowed.');
-jimport ('joomla.application.component.controller');
+ 
+CHANGELOG
 
-// Get an instance of the controller
-$controller = JControllerLegacy::getInstance ('SocialLogin');
+2.0
+* Asynchronous JavaScript
+* Renamed from SocialLogin to OneallSocialLogin
 
-// Perform the requested task
-$controller->execute (JRequest::getCmd ('task', 'display'));
-
-// Redirect if set by the controller
-$controller->redirect ();
+1.0
+* Initial port from Joomla 2.5 to 3.0
